--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,49 +1,23 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link href="{% static 'css/style.css' %}" rel="stylesheet"/>
-  <title>{{ title }}</title>
-</head>
-<body>
-  <div class="container">
-    {% comment %}
-      No anda el data-dimiss  
-    {% endcomment %}
-    {% if messages %}
-      {% for message in messages %}
-          <div class="alert alert-dismissible {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %}">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
-          </div>
-      {% endfor %}
-    {% endif %}
+{% extends 'base.html' %}
 
-    <div class="row">
-      <div class="col">
-        <h2>Login</h2>
-        <form method="post">
-          {% csrf_token %}
-          <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" class="form-control" id="">
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" name="password" class="form-control" id="">
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</body>
+{% block content %}
+	
+	<div class="row">
+		<div class="col">
+			<h2>Login</h2>
+			<form method="post">
+				{% csrf_token %}
+				<div class="form-group">
+					<label for="username">Username</label>
+					<input type="text" name="username" class="form-control" id="">
+				</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input type="password" name="password" class="form-control" id="">
+				</div>
+				<button type="submit" class="btn btn-primary">Login</button>
+			</form>
+		</div>
+	</div>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="{% static 'js/main.js' %}"></script>
-
-</html>
+{% endblock content %}
