Agregado Modelo Producto y Vistas

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
-{% extends 'base.html' %}
-
-
-{% block header %}
-	{% include 'header.html' %}
-{% endblock header %}
-
+{% extends 'base.html' %} 
+{% block header %} 
+	{% include 'header.html' %} 
+{% endblock header %} 
 
 {% block content %}
 
@@ -13,18 +10,47 @@
 
 		{# comentario django #}
 
-		<ul class="list-group">
-			{% for product in products %}
-			<li class="list-group-item">
-				{{ product.title }} {% if product.stock %}
-				<span class="text-success">Disponible</span>
-				{% else %}
-				<span class="text-danger">No Disponible</span>
-				{% endif %}
-			</li>
+		<section class="py-5">
+		<div class="container px-4 px-lg-5 mt-5">
+			<div
+				class="
+					row
+					gx-4 gx-lg-5
+					row-cols-2 row-cols-md-3 row-cols-xl-4
+					justify-content-center
+				"
+			>
+				{% for product in products %}
+					<div class="col mb-5">
+						<div class="card h-100">
+							<!-- Product image-->
+							<img
+								class="card-img-top"
+								src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+								alt="..."
+							/>
+							<!-- Product details-->
+							<div class="card-body p-4">
+								<div class="text-center">
+									<!-- Product name-->
+									<h5 class="fw-bolder">{{ product.title}}</h5>
+									<!-- Product price-->
+									AR${{ product.price }}
+								</div>
+							</div>
+							<!-- Product actions-->
+							<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+								<div class="text-center">
+									<a class="btn btn-outline-dark mt-auto" href="#">View options</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+	</section>
 
-			{% endfor %}
-		</ul>
 	</div>
 
 {% endblock %}
