--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     <section class="py-5">
       <div class="container">
 
-        {# No anda el data-dimiss #}
+        {# ya anda el data-dimiss :thumbs-up: #}
         {% include 'messages.html' %}
 
 			  {% block content %}
@@ -48,6 +48,7 @@
         </p>
       </div>
     </footer>
+    <script src="https://kit.fontawesome.com/efd9785ce3.js" crossorigin="anonymous"></script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
