--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,7 +1,7 @@
 {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-dismissible {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %}">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <div class="alert alert-dismissible fade show {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %}">
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       {{ message }}
     </div>
   {% endfor %}
