--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-dark">
+{% comment %}
+<nav
+  class="
+    navbar navbar-expand-lg navbar-light
+    bg-light
+    border-bottom border-dark
+  "
+>
   <div class="container px-4 px-lg-5">
     <a class="navbar-brand" href="#!">Killari</a>
     <button
@@ -42,6 +49,58 @@
           Cart
           <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
         </button>
+      </form>
+    </div>
+  </div>
+</nav>
+{% endcomment %}
+
+{% url 'login' as login %}
+{% url 'register' as register %}
+{% url 'logout' as logout %}
+
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a href="{% url 'index' %}" class="navbar-brand">Killari</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+
+        <li class="nav-item">
+          <a href="#" class="nav-link" aria-current="page">Sobre Nosotras</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Productos
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Corpiños</a></li>
+            <li><a class="dropdown-item" href="#">Bombachas</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Conjuntos</a></li>
+          </ul>
+        </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a href="{{ logout }}" class="nav-link" aria-current="page"><span class="fas fa-sign-in-alt"></span> Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a href="{{ login }}" class="nav-link {% if request.path == login %}active{% endif %}" aria-current="page"><span class="fas fa-user"></span> Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="{{ register }}" class="nav-link {% if request.path == register %}active{% endif %}" aria-current="page"><span class="fas fa-user-plus"></span> Registrate</a>
+          </li>
+        {% endif %}
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Busca en el sitio" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
       </form>
     </div>
   </div>
