--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -10,17 +10,14 @@
           />
         </div>
         <div class="col-md-6">
-          <div class="small mb-1">SKU: BST-498</div>
-          <h1 class="display-5 fw-bolder">Shop item template</h1>
+          {% comment %} <div class="small mb-1">SKU: BST-498</div> {% endcomment %}
+          <h1 class="display-5 fw-bolder">{{ product.title }}</h1>
           <div class="fs-5 mb-5">
-            <span class="text-decoration-line-through">$45.00</span>
-            <span>$40.00</span>
+            {% comment %} <span class="text-decoration-line-through">$45.00</span> {% endcomment %}
+            <span>AR${{ product.price }}</span>
           </div>
           <p class="lead">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-            at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi
-            alias magni, accusamus eius blanditiis delectus ipsam minima ea iste
-            laborum vero?
+            {{ product.description }}
           </p>
           <div class="d-flex">
             <input
@@ -32,7 +29,7 @@
             />
             <button class="btn btn-outline-dark flex-shrink-0" type="button">
               <i class="bi-cart-fill me-1"></i>
-              Add to cart
+              Agregar al Carrito
             </button>
           </div>
         </div>
