--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -11,7 +11,7 @@
 					<label for="username">Username</label>
 					<input type="text" name="username" class="form-control" id="">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-3">
 					<label for="password">Password</label>
 					<input type="password" name="password" class="form-control" id="">
 				</div>
