--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -10,7 +10,7 @@
 				{% csrf_token %}
 
 				{% for field in form %}
-					<div class="form-group">
+					<div class="form-group mb-3">
 
 						{{ field.label_tag }}
 						{{ field }}
