Agregado template con tabla de talles

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
       </div>
     </section>
     <!-- Footer-->
-    <footer class="py-5 bg-dark fixed-bottom">
+    <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">
           Copyright &copy; JAGUARETE KAA S.A. 2021
