Modelo de User modificado

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,8 @@
 <header class="bg-dark py-5">
   <div class="container px-4 px-lg-5 my-5">
-    <div class="text-center text-white">
-      <h1 class="display-4 fw-bolder">Killari Lencería</h1>
+    <div class="text-center text-white d-flex flex-column justify-content-center">
+      <img src="media/logo_blanco.png" alt="Killari" class="mb-5" style="max-width=100%">
+      {% comment "" %}<h1 class="display-4 fw-bolder">Killari Lencería</h1>{% endcomment %}
       <p class="lead fw-normal text-white-50 mb-0">
         •Con brillo propio y sin ataduras•
       </p>
