--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -5,8 +5,8 @@
         <div class="col-md-6">
           <img
             class="card-img-top mb-5 mb-md-0"
-            src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg"
-            alt="..."
+            src="{{ product.image.url }}"
+            alt="Imagen"
           />
         </div>
         <div class="col-md-6">
