--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="" />
     <title>{{ title }}</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
     <!-- Bootstrap icons-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
@@ -41,11 +41,12 @@
       </div>
     </section>
     <!-- Footer-->
-    <footer class="py-5 bg-dark">
+    <footer class="py-3 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">
           Copyright &copy; JAGUARETE KAA S.A. 2021
         </p>
+        <p class="m-0 text-center text-white">By Mariana Madeira.-</p>
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/efd9785ce3.js" crossorigin="anonymous"></script>
