--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -58,22 +58,27 @@
 {% url 'login' as login %}
 {% url 'register' as register %}
 {% url 'logout' as logout %}
-
+{% load static %}
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
-    <a href="{% url 'index' %}" class="navbar-brand"><img src="media/logo_k_blanco.png" alt="Killari Logo"> </a>
 
+    <!-- Logo -->
+    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/logo_k_blanco.png' %}" alt="Killari Logo"> </a>
+
+    <!-- Menu Responsive -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
-
+        <!-- Acerca de.. -->
         <li class="nav-item">
-          <a href="#" class="nav-link" aria-current="page">Sobre Nosotras</a>
+          <a href="{% url 'about' %}" class="nav-link" aria-current="page">Sobre Nosotras</a>
         </li>
+
+        <!-- Desplegable Categorias -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Productos
@@ -85,6 +90,12 @@
             <li><a class="dropdown-item" href="#">Conjuntos</a></li>
           </ul>
         </li>
+
+        <!-- Contacto -->
+        <li class="nav-item">
+          <a href="mailto:contacto@killarilenceria.com" class="nav-link" aria-current="page">Contacto</a>
+        </li>
+        <!-- Login, Logout, Registrate -->
         {% if user.is_authenticated %}
           <li class="nav-item">
             <a href="{{ logout }}" class="nav-link" aria-current="page"><span class="fas fa-sign-in-alt"></span> Logout</a>
@@ -98,6 +109,7 @@
           </li>
         {% endif %}
       </ul>
+      <!-- Barra de busqueda -->
       {% include 'products/snippets/search.html' with query=query%}
     </div>
   </div>
