--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -11,10 +11,8 @@
           />
         </div>
         <div class="col-md-6">
-          {% comment %} <div class="small mb-1">SKU: BST-498</div> {% endcomment %}
           <h1 class="display-5 fw-bolder">{{ product.title }}</h1>
           <div class="fs-5 mb-5">
-            {% comment %} <span class="text-decoration-line-through">$45.00</span> {% endcomment %}
             <span>AR${{ product.price }}</span>
           </div>
           <p class="lead">
@@ -28,10 +26,9 @@
               value="1"
               style="max-width: 3rem"
             />
-            <button class="btn btn-outline-dark flex-shrink-0" type="button">
-              <i class="bi-cart-fill me-1"></i>
-              Agregar al Carrito
-            </button>
+
+            {% include 'carts/snippets/add.html' %}
+            
           </div>
         </div>
       </div>
