--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,6 @@
     <section class="py-5">
       <div class="container">
 
-        {# ya anda el data-dimiss :thumbs-up: #}
         {% include 'messages.html' %}
 
 			  {% block content %}
@@ -41,7 +40,7 @@
       </div>
     </section>
     <!-- Footer-->
-    <footer class="py-3 bg-dark">
+    <footer class="py-3 bg-dark fixed-bottom">
       <div class="container">
         <p class="m-0 text-center text-white">
           Copyright &copy; JAGUARETE KAA S.A. 2021
