--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -58,13 +58,17 @@
 {% url 'login' as login %}
 {% url 'register' as register %}
 {% url 'logout' as logout %}
+{% url 'carts:cart' as cart %}
+{% url 'about' as about %}
+
+
 {% load static %}
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
 
     <!-- Logo -->
-    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/logo_k_blanco.png' %}" alt="Killari Logo"> </a>
+    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/logo_k_blanco.png' %}" alt="Killari Logo"></a>
 
     <!-- Menu Responsive -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,10 +76,20 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      
+      <!-- Carrito -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == cart %}active{% endif %}" href="{{ cart }}">
+            Mi Carrito <span class="fas fa-shopping-cart"></span>
+          </a>
+        </li>
+      </ul>
+      
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <!-- Acerca de.. -->
         <li class="nav-item">
-          <a href="{% url 'about' %}" class="nav-link" aria-current="page">Sobre Nosotras</a>
+          <a href="{{ about }}" class="nav-link {% if request.path == about %}active{% endif %}" aria-current="page">Sobre Nosotras</a>
         </li>
 
         <!-- Desplegable Categorias -->
@@ -110,7 +124,7 @@
         {% endif %}
       </ul>
       <!-- Barra de busqueda -->
-      {% include 'products/snippets/search.html' with query=query%}
+      {% include 'products/snippets/search.html' with query=query %}
     </div>
   </div>
 </nav>
