--- a/carts/templates/carts/add.html
+++ b/carts/templates/carts/add.html
@@ -5,17 +5,17 @@
   <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
       <div class="row gx-4 gx-lg-5 align-items-center">
-        <div class="col-md-3">
+        <div class="col-lg-3">
           {% if product.image %}
             <img src="{{ product.image.url }}" alt="Imagen del producto" height="200px" width="200px">
           {% endif %}
         </div>
-        <div class="col-md-6">
+        <div class="col">
           <div class="h3 font-weight-bold">
             Producto agregado al carrito de compras
           </div>
           <div class="">
-            <a href="{% url 'product' product.slug %}" class="h4 link-secondary">
+            <a href="{% url 'product' product.slug %}" class="link-dark">
               {{ product.title }}
             </a>
           </div>
@@ -26,7 +26,9 @@
             <a href="{% url 'carts:cart' %}" class="btn btn-outline-dark flex-shrink-0">
               <i class="bi-cart-fill me-1"></i> Ver Carrito
             </a>
-          </div>
+          </div> 
+          <div class="mt-2"><a href="{% url 'index' %}" class="link-secondary">Seguir comprando</a></div>
+          
         </div>
       </div>
     </div>
