--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -64,7 +64,7 @@
 
 {% load static %}
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
 
     <!-- Logo -->
