--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<div class="row">	
-		<div class="col">
-			<h2>{{ title }}</h2>
+	<div class="row justify-content-center">	
+		<div class="col-6">
+			<h2>Registro</h2>
 
 			{# formulario #}
 			<form action="" method="post">
