--- a/carts/templates/carts/add.html
+++ b/carts/templates/carts/add.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load product_extras %}
+{% load cart_extras %}
+
 
 {% block content %}
   <section class="py-5">
@@ -12,7 +14,7 @@
         </div>
         <div class="col">
           <div class="h3 font-weight-bold">
-            Producto agregado al carrito de compras
+            {{ quantity | quantity_add_format }} al carrito de compras
           </div>
           <div class="">
             <a href="{% url 'product' product.slug %}" class="link-dark">
