--- a/carts/templates/carts/cart.html
+++ b/carts/templates/carts/cart.html
@@ -17,21 +17,23 @@
             </tr>
           </thead>
           <tbody>
-            {% for product in cart.products.all %}
-              <tr>
-                <th>{{ forloop.counter }}</th>
-                <th>
-                  {% if product.image %}
-                    <img src="{{ product.image.url }}" alt="Imagen del Producto" width="60" height="60">
-                  {% endif %}
-                </th>
-                <th>
-                  <a href="{% url 'product' product.slug %}" class="link-secondary">{{ product.title }}</a>
-                  {% include 'carts/snippets/remove.html' %}
-                </th>
-                <th>1</th>
-                <th><span class="font-weight-bold">{{ product.price | price_format }} </span></th>
-              </tr>
+            {% for cartpr in cart.products_related %}
+              {% with product=cartpr.product %}
+                <tr>
+                  <th>{{ forloop.counter }}</th>
+                  <th>
+                    {% if product.image %}
+                      <img src="{{ product.image.url }}" alt="Imagen del Producto" width="60" height="60">
+                    {% endif %}
+                  </th>
+                  <th>
+                    <a href="{% url 'product' product.slug %}" class="link-secondary">{{ product.title }}</a>
+                    {% include 'carts/snippets/remove.html' %}
+                  </th>
+                  <th>{{ cartpr.quantity }}</th>
+                  <th><span class="font-weight-bold">{{ product.price | price_format }} </span></th>
+                </tr>
+              {% endwith %}
             {% endfor %}
           </tbody>
         </table>
