--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 	
-	<div class="row">
-		<div class="col">
+	<div class="row justify-content-center">
+		<div class="col-6">
 			<h2>Login</h2>
 			<form method="post">
 				{% csrf_token %}
