--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 {% block content %}
 	
 	<section class="py-5">
-		<div class="container px-4 px-lg-5 my-5">
+		<div class="container px-4 px-lg-5 mb-5">
     	<h1>Sobre nosotras</h1>
       <div class="row gx-4 gx-lg-5 align-items-center">
         <div class="col-md-6">
